--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 	}
 
 	input[type="reset"]{
-		background-color: #837a7a;
+		background-color: #c2704f;
 		border: none;
 		padding: 10px 20px;
 		color: white;
